# libclamav_test

./: CMakeLists.txt  README.md  cmake.sh  comile.py  compile.py  get_clamav.sh  perf.sh
doc/: test.md
pre/sample/: hdp_zhibo.apk
src/: clamav_engine.cpp  clamav_engine.h  clock_time.h  main.cpp
